[gd_scene load_steps=2 format=3 uid="uid://cegsr3co3ebnp"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_tq3gj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tq3gj")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 22.0
offset_right = 683.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 48
text = "Bug Battle"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 198.0
offset_right = 747.0
offset_bottom = 413.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="DeckButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deck Builder"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
